--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PORT=5000
+MONGO_URI=mongodb+srv://Expog_2001:Expog_2001@cluster0.acl3y.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+NODE_ENV=development
+JWT_SECRET=hariom1234
